# colibri-lite

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/clr-cli/: Cargo.toml
crates/clr-cli/src/: main.rs
crates/clr-core/: Cargo.toml
crates/clr-mmap/: Cargo.toml
crates/clr-mmap/src/: lib.rs
crates/clr-qwen3-moe/: Cargo.toml
crates/clr-qwen3-moe/examples/: convert_pinned_dense.rs  convert_pinned_experts.rs
crates/clr-qwen3-moe/src/: block.rs  cache.rs  config.rs  dense_conversion.rs  expert_conversion.rs  full_model_validation_tests.rs  generation.rs  lib.rs  m5_2_trace_capture.rs  m5_4_resident_dense.rs  model.rs  profiling.rs  session.rs  source_config.rs  streaming.rs  tensor_inventory.rs  test_fixture.rs
crates/clr-qwen3-moe/src/block/: tests.rs
crates/clr-qwen3-moe/src/expert_conversion/: io.rs  tests.rs
crates/clr-qwen3-moe/src/model/: tests.rs
crates/clr-qwen3-moe/src/streaming/: tests.rs
crates/clr-storage/: Cargo.toml
crates/clr-storage/examples/: m5_3_expert_access_bench.rs  portable_reader_bench.rs  replay_expert_trace.rs
crates/clr-storage/src/: converter.rs  error.rs  expert.rs  hash.rs  lib.rs  manifest.rs  mmap.rs  reader.rs
crates/clr-storage/src/converter/: tests.rs
docs/: backlog.md  implementation-plan.md  m4.2-optimization-invariants.md  m4.3-f32-baseline-invariants.md  m4.3-next-phase-memory-hierarchy-roadmap.md  tasks.md  temp-artifact-policy.md  work-log.md
docs/adr/: 0001-core-contract-boundaries.md  0002-dense-f32-tensor-contract.md  0003-qwen3-moe-block-correctness.md  0004-tiny-decoder-correctness.md  0005-portable-artifact-reader.md  0006-expert-cache-ownership.md  0007-streaming-expert-payload.md  0008-defer-memory-mapping.md  0009-token-sampling-contract.md  0010-generation-session-kv-cache.md  0011-qwen3-30b-a3b-source-contract.md  0012-explicit-attention-head-dimension.md  0013-pinned-qwen3-config-mapping.md  (+32 more)
docs/reports/: m0.md  (+47 more)
scripts/: analyze_m5_2_01_corpus.py  analyze_m5_3_compute_profile.py  analyze_m5_3_expert_ranges.py  benchmark_m4_3_05_ik_llama.ps1  capture_m5_1_00_trace.ps1  capture_m5_2_01_corpus.py  capture_m5_2_03_runtime_validation.py  capture_m5_3_02_runtime_validation.py  capture_m5_3_03_compute_profile.py  capture_m5_3_04_mmap.py  capture_m5_4_02_resident_dense_runtime.py  cleanup_temp_artifacts.py  measure_m4_2_05_baseline.ps1  replay_m5_1_02_trace.py  simulate_m5_1_memory_hierarchy.py  simulate_m5_2_corpus_cache.py  simulate_m5_4_resident_dense.py  test_analyze_m5_3_expert_ranges.py  test_simulate_m5_1_memory_hierarchy.py  test_simulate_m5_2_corpus_cache.py  test_simulate_m5_4_resident_dense.py  validate_m5_1_00_trace.py  validate_pinned_source.py
(+369 files in other folders)
