[workspace]
resolver = "3"
members = [
    "crates/clr-core",
    "crates/clr-storage",
    "crates/clr-qwen3-moe",
    "crates/clr-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["AppCorner"]
repository = "https://github.com/appcorner/colibri-lite-rs"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
