[package]
name = "clr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for colibri-lite-rs"

[dependencies]
clr-core = { path = "../clr-core" }

[lints]
workspace = true
