[package]
name = "clr-qwen3-moe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Qwen3-MoE architecture implementation for colibri-lite-rs"

[features]
full-model-validation = []
m5-3-instrumentation = ["clr-storage/m5-3-instrumentation"]
m5-3-reusable-buffer = ["clr-storage/m5-3-reusable-buffer"]
m5-3-mmap = ["m5-3-instrumentation", "clr-storage/m5-3-mmap"]
m5-3-compute-profiling = ["m5-3-instrumentation"]

[dependencies]
clr-core = { path = "../clr-core" }
clr-storage = { path = "../clr-storage" }

[lints]
workspace = true
