[package]
name = "clr-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Storage and expert-cache subsystem for colibri-lite-rs"

[features]
m5-3-instrumentation = []
m5-3-reusable-buffer = ["m5-3-instrumentation"]

[[example]]
name = "m5_3_expert_access_bench"
required-features = ["m5-3-reusable-buffer"]

[dependencies]
clr-core = { path = "../clr-core" }

[lints]
workspace = true
